# Physics-of-Data

./: .gitignore  README.md  pyproject.toml
.github/copilot/skills/: architecture.md  physics_of_data.md
artifacts/: 02_cancer_final_report.json  02_cancer_grouped_features.json  02_cancer_profile.json  02_eurusd_stats.json  03_model_optimization.json  03_model_selection.json  03_synthetic_system.json  05_visual_registry.json
notebooks/: Lab01_Penguins.ipynb  Lab02_Preprocessing.ipynb  Lab02_TimeSeries.ipynb  Lab03_Intuition.ipynb
prompts/: interaction_iris.txt
src/: dynamics.py  kinematics.py  visuals.py
